change one flow

--- a/.env
+++ b/.env
@@ -27,4 +27,9 @@ BLOCKCHAIN_URL_SERVICE=https://middleware-bank-azteca.herokuapp.com/api/
 PROVIDER=rinkeby
 PROJECT_ID=05f4fb8b9b7c464184bae9249b71ec57
 SMARTCONTRACT_ADDRESS=0xe391ff190a46176197b5e8b6d89b507c6f7404f1
-NODE_ACCOUNT=0xe391ff190a46176197b5e8b6d89b507c6f7404f1
+
+#############################
+#          blockchain account
+#############################
+NODE_ACCOUNT=0x1E5d79DE45258D18b567eD8791012960e16FF802
+ACCOUNT_NAME=AZTECA
